--- a/scrollytelly/index.html
+++ b/scrollytelly/index.html
@@ -9,18 +9,21 @@
 </head>
 <body>
 <div class="top-center">
-  <div class="title">Scam Trends Among Senior Australians</div>
+  <div class="title">TITLE</div>
   The rise in scams targeting senior Australians is a call to action. By increasing awareness, enhancing digital literacy, 
   and implementing stronger safeguards, we can help protect our elderly from falling victim to these ruthless crimes.
   <br><br>
-  Scroll to Start
+  Discover how scams are increasingly targeting Australians aged 65 and over. 
+  <br><br>
+  <div class="title">Scroll to Start</div>
 </div>
 <div class="container">
   <div id='graphic'>
     <div id='sections'>
       <section class="step">
-        <div class="title">SCROLL TO START</div>
-        Discover how scams are increasingly targeting Australians aged 65 and over. 
+        <div class="title">Scam Trends Among Senior Australians</div>
+        The rise in scams targeting senior Australians is a call to action. By increasing awareness, enhancing digital literacy, 
+        and implementing stronger safeguards, we can help protect our elderly from falling victim to these ruthless crimes.
       </section>
       <section class="step">
         <div class="title">Rising Scam Incidents</div>
