Update scrollytelly for better flow

--- a/scrollytelly/index.html
+++ b/scrollytelly/index.html
@@ -22,8 +22,14 @@
     <div id='sections'>
       <section class="step">
         <div class="title">Scam Trends Among Senior Australians</div>
-        The rise in scams targeting senior Australians is a call to action. By increasing awareness, enhancing digital literacy, 
-        and implementing stronger safeguards, we can help protect our elderly from falling victim to these ruthless crimes.
+        From January 2020 to June 2024, over 120,000 scams targeting senior Australians have been reported. 
+        <br><br>
+        During this period, the frequency of reported scams has increased significantly year over year, reflecting the growing sophistication 
+        and adaptability of scammers. These malicious actors continually devise new tactics to exploit the vulnerabilities of older Australians, 
+        preying on their trust and often limited familiarity with digital technologies.
+        <br><br>
+        The escalating trend in scam reports underscores the urgent need for heightened awareness, education, and protective measures to safeguard 
+        our senior population from these evolving threats.
       </section>
       <section class="step">
         <div class="title">Rising Scam Incidents</div>
@@ -38,21 +44,20 @@
         among the elderly.
       </section>
       <section class="step">
-        <div class="title">Text Messaging as the Primary Contact Mode</div>
-        In an era where mobile phones are everywhere, scammers have increasingly turned to text messaging as their weapon of choice. 
-        For seniors, a simple text message can lead to devastating financial losses, as these messages often appear harmless but are designed 
+        <div class="title">Email as the Primary Contact Mode</div>
+        In an era where everyone has an email address, scammers have increasingly turned to emails as their weapon of choice. 
+        For seniors, a simple email can lead to devastating financial losses, as these messages often appear harmless but are designed 
         to deceive.
       </section>
       <section class="step">
         <div class="title">Geographical Concentration in Certain States</div>
         While no part of Australia is immune to scams, certain states like New South Wales, Victoria, and Queensland have emerged as hotspots for 
-        fraudulent activities targeting seniors. This geographical disparity raises questions about why these areas are more susceptible and 
-        what can be done to mitigate the risks.
+        fraudulent activities targeting seniors. This geographical disparity is likely linked to specific states having higher populations and commercial activity.
       </section>
       <section class="step">
         <div class="title">Gender Differences in Scam Victimisation</div>
-        When it comes to falling victim to scams, gender plays a role in the experience of senior Australians. Women, in particular, 
-        have been found to suffer more significant financial losses in certain types of scams, highlighting a need for targeted awareness 
+        When it comes to being targetted scams, gender plays a role in the experience of senior Australians. Men, in particular, 
+        have been found to be targetted more significantly in certain types of scams, highlighting a need for awareness 
         campaigns that address the specific risks faced by each gender.
       </section>
       <section class="step">
