--- a/scrollytelly/index.html
+++ b/scrollytelly/index.html
@@ -44,9 +44,9 @@
         among the elderly.
       </section>
       <section class="step">
-        <div class="title">Email as the Primary Contact Mode</div>
-        In an era where everyone has an email address, scammers have increasingly turned to emails as their weapon of choice. 
-        For seniors, a simple email can lead to devastating financial losses, as these messages often appear harmless but are designed 
+        <div class="title">Email and Mobile as the Primary Contact Mode</div>
+        In an era where everyone has an email address and mobile, scammers have increasingly turned to emails, phone calls and text messages as their weapons of choice. 
+        For seniors, a simple email or text can lead to devastating financial losses, as these messages often appear harmless but are designed 
         to deceive.
       </section>
       <section class="step">
@@ -56,7 +56,7 @@
       </section>
       <section class="step">
         <div class="title">Gender Differences in Scam Victimisation</div>
-        When it comes to being targetted scams, gender plays a role in the experience of senior Australians. Men, in particular, 
+        When it comes to targetted scams, gender plays a role in the experience of senior Australians. Men, in particular, 
         have been found to be targetted more significantly in certain types of scams, highlighting a need for awareness 
         campaigns that address the specific risks faced by each gender.
       </section>
@@ -64,17 +64,17 @@
         <div class="title">High Financial Impact of Scams</div>
         For many seniors, the financial impact of falling victim to a scam can be devastating, wiping out savings and causing long-term 
         financial insecurity. The sheer magnitude of the losses reported highlights the ruthless nature of these scams and the urgent need 
-        for protective measures.
+        for protective measures. In over 300 reported cases, senior Australians have lost over $1 million. 
       </section>
       <section class="step">
         <div class="title">Seasonal Trends in Scam Reports</div>
-        Scammers don't take a holiday—if anything, they ramp up their efforts during the festive season. Senior Australians need to be 
-        particularly cautious during these times, as the joy of the holidays can quickly turn into despair with just one wrong click.
+        Scammers don't take a holiday—if anything, their efforts stay consistent year round. Senior Australians need to consistently be 
+        cautious, as any day can quickly turn into despair with just one wrong click.
       </section>
       <section class="step">
         <div class="title">The Role of Awareness and Reporting</div>
         As awareness about scams grows, so too does the number of reported incidents. The data likely represents just the tip of 
-        the iceberg, as many seniors may not report scams due to shame, embarrassment, or simply not realizing they've been scammed.
+        the iceberg, as many seniors may not report scams due to shame, embarrassment, or simply not realising they've been scammed.
       </section>
     </div>
     <div id="vis">
