--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,12 +52,12 @@
       <div class="container">
         <h1 class="display-4">Welcome to Senior Safe</h1>
         <p class="lead">
-          Scam is an illegal act of obtaining others' property or sensitive
+          A scam is an illegal act of obtaining others' property or sensitive
           information through deceptive means. Common types of scams include
-          investment, false billing, phishing, and lottery scams. With the
-          widespread use of the internet and social media, scam tactics have
+          phishing, investment, and false billing. With the
+          widespread use of the internet, mobile devices and social media, scam tactics have
           become increasingly sophisticated and far-reaching. Therefore, staying
-          vigilant and understanding common scam methods are crucial to
+          vigilant and understanding common scam methods is crucial to
           protecting oneself from losses.
         </p>
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
