--- a/scrollytelly/index.html
+++ b/scrollytelly/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="top-center">
-  <div class="title">TITLE</div>
+  <div class="title"></div>
   The rise in scams targeting senior Australians is a call to action. By increasing awareness, enhancing digital literacy, 
   and implementing stronger safeguards, we can help protect our elderly from falling victim to these ruthless crimes.
   <br><br>
