--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -14,53 +15,67 @@
   </head>
 
   <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">
-        <a class="navbar-brand" href="#">Senior Safe</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#"
-                >Home <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Statistics</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+   
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container">
+    <a class="navbar-brand" href="#">
+      <img src="resources/logof.jpg" alt="Senior Safe Logo" class="logo"> Senior Safe
+    </a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#"
+            >Home <span class="sr-only">(current)</span></a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Statistics</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
     <!-- Landing Section -->
     <section class="landing-section text-center">
       <div class="container">
         <h1 class="display-4">Welcome to Senior Safe</h1>
         <p class="lead">
-          A scam is an illegal act of obtaining others' property or sensitive
+          Scam is an illegal act of obtaining others' property or sensitive
           information through deceptive means. Common types of scams include
-          phishing, investment, and false billing. With the
-          widespread use of the internet, mobile devices and social media, scam tactics have
+          investment, false billing, phishing, and lottery scams. With the
+          widespread use of the internet and social media, scam tactics have
           become increasingly sophisticated and far-reaching. Therefore, staying
-          vigilant and understanding common scam methods is crucial to
+          vigilant and understanding common scam methods are crucial to
           protecting oneself from losses.
         </p>
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+      </div>
+    </section>
+
+    <!-- Quotes Section -->
+    <section class="quotes-section text-center">
+      <div class="container">
+        <h2 class="display-5">Quotes on Scams in Victoria</h2>
+        <div class="quotes-wrapper">
+          <p class="quote">"Scams in Victoria are evolving; awareness is the key to prevention."</p>
+          <p class="quote">"Stay vigilant, protect your personal information, and report suspicious activities."</p>
+          <p class="quote">"Knowledge is power – educate yourself on the latest scam tactics."</p>
+        </div>
       </div>
     </section>
 
