--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,43 +11,50 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
   </head>
 
   <body>
-   
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container">
-    <a class="navbar-brand" href="#">
-      <img src="resources/logof.jpg" alt="Senior Safe Logo" class="logo"> Senior Safe
-    </a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarNav"
-      aria-controls="navbarNav"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#"
-            >Home <span class="sr-only">(current)</span></a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Statistics</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img
+            src="resources/logof.jpg"
+            alt="Senior Safe Logo"
+            class="logo"
+          />Senior Safe
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#"
+                >Home <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Statistics</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <!-- Landing Section -->
     <section class="landing-section text-center">
@@ -70,25 +76,48 @@
     <!-- Quotes Section -->
     <section class="quotes-section text-center">
       <div class="container">
-        <h2 class="display-5">Quotes on Scams in Victoria</h2>
-        <div class="quotes-wrapper">
-          <p class="quote">"Scams in Victoria are evolving; awareness is the key to prevention."</p>
-          <p class="quote">"Stay vigilant, protect your personal information, and report suspicious activities."</p>
-          <p class="quote">"Knowledge is power – educate yourself on the latest scam tactics."</p>
-        </div>
+        <h2 class="display-5 text-white">Stay Vigilant, Stay Safe</h2>
+        <p class="lead text-white">
+          "Scams don't target the foolish, they target the trusting." - Unknown
+        </p>
+        <p class="lead text-white">
+          "Awareness is the best defense against scams." - Victoria Police
+        </p>
       </div>
     </section>
 
     <!-- Footer -->
     <footer class="footer bg-light text-center">
       <div class="container">
-        <span class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</span>
+        <div class="row">
+          <div class="col-md-4">
+            <h5>Contact Us</h5>
+            <p>Email: <a href="mailto:info@seniorsafe.com">info@seniorsafe.com</a></p>
+            <p>Phone: <a href="tel:+6134567890">+61 434565678</a></p>
+          </div>
+          <div class="col-md-4">
+            <h5>Follow Us</h5>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </div>
+          <div class="col-md-4">
+            <h5>Quick Links</h5>
+            <ul class="list-unstyled">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Statistics</a></li>
+              <li><a href="#">Features</a></li>
+            </ul>
+          </div>
+        </div>
+        <hr />
+        <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
       </div>
     </footer>
 
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="script.js"></script> -->
   </body>
 </html>
