--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,19 +13,107 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <style>
+      /* Navbar */
+      .navbar-brand .logo {
+        height: 40px;
+        margin-right: 10px;
+        vertical-align: middle;
+      }
+
+      body {
+        font-family: Arial, sans-serif;
+      }
+
+      .landing-section {
+        display: flex;
+        padding: 0;
+        justify-content: center;
+        align-items: center;
+        background-image: url('resources/landing_pic.jpeg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        position: relative;
+        color: white;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        min-height: 666px;
+      }
+
+      .landing-section::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+      }
+
+      .landing-section .container {
+        position: relative;
+        z-index: 2;
+        text-align: center;
+      }
+
+      .quotes-section {
+        background-color: #002147;
+        color: white;
+        padding: 60px 20px;
+        text-align: center;
+        min-height: 300px; /* Adjust this to make the section bigger */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .quotes-section h2 {
+        font-size: 24px;
+        margin-bottom: 30px;
+      }
+
+      .quote-text {
+        font-size: 20px;
+        font-style: italic;
+        max-width: 800px;
+        margin: 0 auto;
+      }
+
+      .footer {
+        padding: 20px 0;
+        background-color: #f8f9fa;
+        text-align: center;
+        position: fixed;
+        width: 100%;
+        bottom: 0;
+      }
+
+      .footer .social-icons {
+        margin-bottom: 10px;
+      }
+
+      .footer .social-icons a {
+        color: #555;
+        margin: 0 10px;
+        font-size: 24px;
+        text-decoration: none;
+      }
+
+      .footer .social-icons a:hover {
+        color: #007bff;
+      }
+    </style>
   </head>
 
   <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img
-            src="resources/logof.jpg"
-            alt="Senior Safe Logo"
-            class="logo"
-          />Senior Safe
+          <img src="resources/logof.jpg" alt="Senior Safe Logo" class="logo" />
+          Senior Safe
         </a>
         <button
           class="navbar-toggler"
@@ -74,50 +162,51 @@
     </section>
 
     <!-- Quotes Section -->
-    <section class="quotes-section text-center">
+    <section class="quotes-section">
       <div class="container">
-        <h2 class="display-5 text-white">Stay Vigilant, Stay Safe</h2>
-        <p class="lead text-white">
-          "Scams don't target the foolish, they target the trusting." - Unknown
-        </p>
-        <p class="lead text-white">
-          "Awareness is the best defense against scams." - Victoria Police
-        </p>
+        <div class="quote-text" id="quoteText"></div>
       </div>
     </section>
 
     <!-- Footer -->
-    <footer class="footer bg-light text-center">
+    <footer class="footer">
       <div class="container">
-        <div class="row">
-          <div class="col-md-4">
-            <h5>Contact Us</h5>
-            <p>Email: <a href="mailto:info@seniorsafe.com">info@seniorsafe.com</a></p>
-            <p>Phone: <a href="tel:+6134567890">+61 434565678</a></p>
-          </div>
-          <div class="col-md-4">
-            <h5>Follow Us</h5>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-          </div>
-          <div class="col-md-4">
-            <h5>Quick Links</h5>
-            <ul class="list-unstyled">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Statistics</a></li>
-              <li><a href="#">Features</a></li>
-            </ul>
-          </div>
+        <div class="social-icons">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
         </div>
-        <hr />
-        <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
+        <div>
+          <p>
+            © 2024 SeniorSafe. All Rights Reserved. | <a href="#">Contact Us</a>
+          </p>
+        </div>
       </div>
     </footer>
 
-    <!-- Scripts -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+      const quotes = [
+        "Scams target everyone. Stay alert!",
+        "Protect your information online.",
+        "Don't be a victim, recognize scam signs.",
+        "Report suspicious activities immediately.",
+        "Educate yourself and others about scams."
+      ];
+
+      let currentQuoteIndex = 0;
+      const quoteText = document.getElementById("quoteText");
+
+      function showNextQuote() {
+        quoteText.textContent = quotes[currentQuoteIndex];
+        currentQuoteIndex = (currentQuoteIndex + 1) % quotes.length;
+      }
+
+      // Show the first quote initially
+      showNextQuote();
+
+      // Change quote every 3 seconds
+      setInterval(showNextQuote, 3000);
+    </script>
   </body>
 </html>
