--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,194 +1,377 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Senior Safe</title>
-    <link href="styles.css" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
-    <style>
-      /* Existing CSS */
-      .quotes-section {
-        background-color: #333;
-        padding: 40px 0;
-        color: white;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Senior Safe</title>
+  <link href="styles.css" rel="stylesheet" />
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+    crossorigin="anonymous"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+  />
+  <style>
+    /* General Styles */
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+      overflow-x: hidden;
+    }
 
-      .quote-text {
-        font-size: 24px;
-        font-style: italic;
-        max-width: 1000px;
-        margin: 0 auto;
-        line-height: 1.5;
-        min-height: 60px;
+    /* Navbar */
+    .navbar-brand .logo {
+      height: 40px;
+      margin-right: 10px;
+      vertical-align: middle;
+    }
+
+    .navbar-nav .nav-link {
+      color: #002147;
+      font-weight: bold;
+    }
+
+    .navbar-nav .nav-link:hover {
+      color: #0056b3;
+    }
+
+    /* Landing Section */
+    .landing-section {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-image: url('resources/landing_pic.jpeg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      position: relative;
+      color: white;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+      min-height: 700px;
+      padding: 40px 20px;
+    }
+
+    .landing-section::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 1;
+    }
+
+    .landing-section .container {
+      position: relative;
+      z-index: 2;
+      text-align: center;
+    }
+
+    /* Enhanced Heading */
+    .landing-section h1 {
+      font-size: 4rem;
+      font-weight: 700;
+      color: transparent;
+      background: linear-gradient(to right, #ff9d00, #ff6f00);
+      -webkit-background-clip: text;
+      background-clip: text;
+      text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.7);
+      letter-spacing: 2px;
+      animation: fadeInUp 2s ease-out;
+      margin-bottom: 20px;
+    }
+
+    @keyframes fadeInUp {
+      from {
         opacity: 0;
-        transition: opacity 1s ease-in-out;
+        transform: translateY(20px);
       }
-
-      .quote-text.visible {
+      to {
         opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .landing-section p {
+      font-size: 1.25rem;
+      margin-bottom: 30px;
+    }
+
+    .btn-primary {
+      background-color: #ff9d00;
+      border-color: #ff9d00;
+      z-index: 3;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+      font-size: 1.2rem;
+    }
+
+    .btn-primary:hover {
+      background-color: #e69200;
+      border-color: #e69200;
+    }
+
+    /* Quotes Section */
+    .quotes-section {
+      background-color: #333;
+      padding: 40px 0;
+      color: white;
+    }
+
+    .quote-text {
+      font-size: 24px;
+      font-style: italic;
+      max-width: 1000px;
+      margin: 0 auto;
+      line-height: 1.5;
+      min-height: 60px;
+      opacity: 0;
+      transition: opacity 1s ease-in-out;
+    }
+
+    .quote-text.visible {
+      opacity: 1;
+    }
+
+    .gold-btn {
+      background-color: gold;
+      color: black;
+      border: none;
+      padding: 10px 20px;
+      font-size: 18px;
+      cursor: pointer;
+    }
+
+    .gold-btn:hover {
+      background-color: darkgoldenrod;
+    }
+
+    /* Trending Scams Section */
+    .trending-scams-section {
+      padding: 80px 20px;
+      background-color: #f7f7f7;
+    }
+
+    .trending-scams-section h2 {
+      font-size: 2.5rem;
+      margin-bottom: 40px;
+    }
+
+    .trending-scams-section p {
+      font-size: 1.2rem;
+      margin-bottom: 30px;
+    }
+
+    /* Footer */
+    .footer {
+      padding: 20px 0;
+      background-color: #f8f9fa;
+      text-align: center;
+      border-top: 1px solid #eaeaea;
+      margin-top: 20px;
+    }
+
+    .footer h5 {
+      margin-bottom: 15px;
+      font-size: 1.2rem;
+      color: #002147;
+    }
+
+    .footer p, .footer a {
+      color: #1F3C88;
+      font-size: 0.9rem;
+      text-decoration: none;
+    }
+
+    .footer a:hover {
+      color: #0056b3;
+      text-decoration: underline;
+    }
+
+    .footer i {
+      font-size: 1.5rem;
+      color: #002147;
+      margin: 0 10px;
+      transition: color 0.3s;
+    }
+
+    .footer i:hover {
+      color: #0056b3;
+    }
+
+    .footer .list-unstyled li {
+      margin-bottom: 10px;
+    }
+
+    .footer hr {
+      margin: 20px 0;
+      border-color: #eaeaea;
+    }
+
+    .footer .text-muted {
+      font-size: 0.85rem;
+      color: #1F3C88;
+    }
+
+    /* Media Queries for Responsiveness */
+    @media (max-width: 768px) {
+      .landing-section h1 {
+        font-size: 2.5rem;
       }
 
-      .gold-btn {
-        background-color: gold;
-        color: black;
-        border: none;
-        padding: 10px 20px;
-        font-size: 18px;
-        cursor: pointer;
+      .quotes-section h2 {
+        font-size: 2rem;
       }
 
-      .gold-btn:hover {
-        background-color: darkgoldenrod;
+      .trending-scams-section h2 {
+        font-size: 2rem;
       }
-    </style>
-  </head>
+    }
+  </style>
+</head>
 
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">
-        <a class="navbar-brand" href="#">
-          <img
-            src="resources/logof.jpg"
-            alt="Senior Safe Logo"
-            class="logo"
-          />Senior Safe
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#"
-                >Home <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Statistics</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img
+          src="resources/logof.jpg"
+          alt="Senior Safe Logo"
+          class="logo"
+        />Senior Safe
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Statistics</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Landing Section -->
+  <section class="landing-section text-center">
+    <div class="container">
+      <h1 class="display-4">Welcome to Senior Safe</h1>
+      <p class="lead">
+        Scam is an illegal act of obtaining others' property or sensitive
+        information through deceptive means. Common types of scams include
+        investment, false billing, phishing, and lottery scams. With the
+        widespread use of the internet and social media, scam tactics have
+        become increasingly sophisticated and far-reaching. Therefore, staying
+        vigilant and understanding common scam methods are crucial to
+        protecting oneself from losses.
+      </p>
+      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    </div>
+  </section>
+
+  <!-- Quotes Section -->
+  <section class="quotes-section text-center">
+    <div class="container">
+      <h2 class="display-5 text-white">Stay Vigilant, Stay Safe</h2>
+      <div id="quote-text" class="quote-text visible">
+        "Australians lost a record amount of more than $2.7 billion to scams in 2023."
+      </div>
+      <button class="btn gold-btn mt-4" onclick="scrollToTrendingScams()">Explore Trending Scams</button>
+    </div>
+  </section>
+
+  <!-- Trending Scams Section -->
+  <section class="trending-scams-section text-center" id="trending-scams">
+    <div class="container">
+      <h2 class="display-5">Trending Scams</h2>
+      <p class="lead">Learn about the latest scams targeting seniors.</p>
+      <!-- Content for Trending Scams goes here -->
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer bg-light text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h5>Contact Us</h5>
+          <p>Email: <a href="mailto:info@seniorsafe.com">info@seniorsafe.com</a></p>
+          <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
+        </div>
+        <div class="col-md-4">
+          <h5>Follow Us</h5>
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
+        <div class="col-md-4">
+          <h5>Quick Links</h5>
+          <ul class="list-unstyled">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Statistics</a></li>
+            <li><a href="#">Features</a></li>
           </ul>
         </div>
       </div>
-    </nav>
+      <hr />
+      <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
+    </div>
+  </footer>
 
-    <!-- Landing Section -->
-    <section class="landing-section text-center">
-      <div class="container">
-        <h1 class="display-4">Welcome to Senior Safe</h1>
-        <p class="lead">
-          Scam is an illegal act of obtaining others' property or sensitive
-          information through deceptive means. Common types of scams include
-          investment, false billing, phishing, and lottery scams. With the
-          widespread use of the internet and social media, scam tactics have
-          become increasingly sophisticated and far-reaching. Therefore, staying
-          vigilant and understanding common scam methods are crucial to
-          protecting oneself from losses.
-        </p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-      </div>
-    </section>
+  <!-- Scripts -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script>
+    const quotes = [
+      "Australians lost a record amount of more than $2.7 billion to scams in 2023.",
+      "Have you been scammed?",
+      "Seniors are often targeted by scammers due to their perceived vulnerability.",
+      "Over 70% of scam victims aged 65 and older report financial losses."
+    ];
 
-    <!-- Quotes Section -->
-    <section class="quotes-section text-center">
-      <div class="container">
-        <h2 class="display-5 text-white">Stay Vigilant, Stay Safe</h2>
-        <div id="quote-text" class="quote-text visible">
-          "Australians lost a record amount of more than $2.7 billion to scams in 2023."
-        </div>
-        <button class="btn gold-btn mt-4" onclick="scrollToTrendingScams()">Explore Trending Scams</button>
-      </div>
-    </section>
+    let currentQuoteIndex = 0;
 
-    <!-- Trending Scams Section -->
-    <section class="trending-scams-section text-center" id="trending-scams">
-      <div class="container">
-        <h2 class="display-5">Trending Scams</h2>
-        <p class="lead">Learn about the latest scams targeting seniors.</p>
-        <!-- Content for Trending Scams goes here -->
-      </div>
-    </section>
+    function changeQuote() {
+      const quoteElement = document.getElementById('quote-text');
+      quoteElement.classList.remove('visible'); // Hide the current quote
 
-    <!-- Footer -->
-    <footer class="footer bg-light text-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4">
-            <h5>Contact Us</h5>
-            <p>Email: <a href="mailto:info@seniorsafe.com">info@seniorsafe.com</a></p>
-            <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
-          </div>
-          <div class="col-md-4">
-            <h5>Follow Us</h5>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-          </div>
-          <div class="col-md-4">
-            <h5>Quick Links</h5>
-            <ul class="list-unstyled">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Statistics</a></li>
-              <li><a href="#">Features</a></li>
-            </ul>
-          </div>
-        </div>
-        <hr />
-        <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
-      </div>
-    </footer>
+      setTimeout(() => {
+        quoteElement.textContent = quotes[currentQuoteIndex]; // Update the text
+        quoteElement.classList.add('visible'); // Show the new quote
+        currentQuoteIndex = (currentQuoteIndex + 1) % quotes.length;
+      }, 1000); // Delay for 1 second for smooth fading
+    }
 
-    <!-- Scripts -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script>
-      const quotes = [
-        "Australians lost a record amount of more than $2.7 billion to scams in 2023.",
-        "Have you been scammed?",
-        "Seniors are often targeted by scammers due to their perceived vulnerability.",
-        "Over 70% of scam victims aged 65 and older report financial losses."
-      ];
+    // Change quote every 3 seconds (3000 ms)
+    setInterval(changeQuote, 3000);
 
-      let currentQuoteIndex = 0;
-
-      function changeQuote() {
-        const quoteElement = document.getElementById('quote-text');
-        quoteElement.classList.remove('visible'); // Hide the current quote
-
-        setTimeout(() => {
-          quoteElement.textContent = quotes[currentQuoteIndex]; // Update the text
-          quoteElement.classList.add('visible'); // Show the new quote
-          currentQuoteIndex = (currentQuoteIndex + 1) % quotes.length;
-        }, 1000); // Delay for 1 second for smooth fading
-      }
-
-      // Change quote every 3 seconds (3000 ms)
-      setInterval(changeQuote, 3000);
-
-      function scrollToTrendingScams() {
-        document.getElementById('trending-scams').scrollIntoView({ behavior: 'smooth' });
-      }
-    </script>
-  </body>
+    function scrollToTrendingScams() {
+      document.getElementById('trending-scams').scrollIntoView({ behavior: 'smooth' });
+    }
+  </script>
+</body>
 </html>
