--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -23,6 +23,7 @@
     <script src="script.js"></script>
     <script src="js/scroller.js"></script>
     <script src="js/selection.js"></script>
+    <script src="https://d3js.org/d3.v6.min.js"></script>
 
     <style>
       /* Existing CSS */
