--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -92,7 +92,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="data.html">Statistics</a>
+              <a class="nav-link" href="data.html">Latest Scam Trends</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Features</a>
@@ -230,7 +230,7 @@
             <h5>Quick Links</h5>
             <ul class="list-unstyled">
               <li><a href="#">Home</a></li>
-              <li><a href="#">Statistics</a></li>
+              <li><a href="#">Latest Scam Trends</a></li>
               <li><a href="#">Features</a></li>
             </ul>
           </div>
