--- a/scrollytelly/home.html
+++ b/scrollytelly/home.html
@@ -92,7 +92,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="data.html">Statistics</a>
+              <a class="nav-link" href="data.html">Latest Scam Trends</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Features</a>
