create a basic layout for the trending scams section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -86,10 +86,18 @@
 
   <!-- Trending Scams Section -->
   <section class="trending-scams-section text-center" id="trending-scams">
-    <div class="container">
-      <h2 class="display-5">Trending Scams</h2>
-      <p class="lead">Learn about the latest scams targeting seniors.</p>
+    <h2 class="display-5">Most common scam types among the elderly</h2>
+    <div class="card-container">
       <!-- Content for Trending Scams goes here -->
+      <div class="card">
+        False Billing
+      </div>
+      <div class="card">
+        Investment
+      </div>
+      <div class="card">
+        Phishing
+      </div>
     </div>
   </section>
 
