added what to do section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -101,6 +101,19 @@
     </div>
   </section>
 
+  <!-- What To Do Section -->
+  <section class="what-to-do-section text-center">
+    <h2> What to do if you think you've been scammed</h2>
+    <br>
+    <div class="list-container">
+      <ol class="gradient-list">
+        <li>Use our tools to verify if the email is a scam</li>
+        <li>TO DO ...</li>
+        <li>Click here to report</li>
+      </ol>
+    </div>
+  </section>
+
   <!-- Footer -->
   <footer class="footer bg-light text-center">
     <div class="container">
