updated the intro section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,17 +59,11 @@
   <!-- Landing Section -->
   <section class="landing-section text-center">
     <div class="container">
-      <h1 class="display-4">Welcome to Senior Safe</h1>
-      <p class="lead">
-        Scam is an illegal act of obtaining others' property or sensitive
-        information through deceptive means. Common types of scams include
-        investment, false billing, phishing, and lottery scams. With the
-        widespread use of the internet and social media, scam tactics have
-        become increasingly sophisticated and far-reaching. Therefore, staying
-        vigilant and understanding common scam methods are crucial to
-        protecting oneself from losses.
+      <h1 class="intro-title">Are you sure it's not a scam?</h1>
+      <p class="intro-body">
+        We can help you identify the most prevalent scams among elderly in Australia
       </p>
-      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+      <a class="btn-blue" href="#" role="button">Check our latest trends</a>
     </div>
   </section>
 
