added footer to each scam page

--- a/frontend/smishingPhishing.html
+++ b/frontend/smishingPhishing.html
@@ -104,6 +104,34 @@
                 </ol>
             </div>
         </section>
+
+        <!-- Footer -->
+        <footer class="footer bg-light text-center">
+            <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                <h5>Contact Us</h5>
+                <p>Email: <a href="mailto:info@seniorsafe.com">info@seniorsafe.com</a></p>
+                <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
+                </div>
+                <div class="col-md-4">
+                <h5>Follow Us</h5>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+                <div class="col-md-4">
+                <h5>Quick Links</h5>
+                <ul class="list-unstyled">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Discover</a></li>
+                </ul>
+                </div>
+            </div>
+            <hr />
+            <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
+            </div>
+        </footer>
     </body>
 
 </html>
