added link to the check latest button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,7 +69,7 @@
       <p class="intro-body">
         We can help you identify the most prevalent scams among elderly in Australia
       </p>
-      <a class="btn-blue" href="#" role="button">Check our latest trends</a>
+      <a class="btn-blue" href="../scrollytelly/data.html" role="button">Check our latest trends</a>
     </div>
   </section>
 
